fix cat spacing

--- a/_scss/_modules/_m-post-list.scss
+++ b/_scss/_modules/_m-post-list.scss
@@ -14,7 +14,7 @@
 
   &__categories {
     display: inline-block;
-    margin-right: $space-small;
+    margin: 0 $space-small $space-small 0;
   }
 
   &__category {
